@@ -1,3 +1,8 @@
+2003-03-17  Nick Garnett  <nickg@balti.calivar.com>
+
+	* src/monitor.c (cyg_monitor_network): Added monitoring of Mbufs
+	to network page.
+
 2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* cdl/httpd.cdl: Add doc link.
